[build-system]
requires = ["hatchling", "hatch-vcs", "nipreps-versions"]
build-backend = "hatchling.build"

[project]
name = "nireports"
description = "NiReports - The Visual Report System (VRS) of NiPreps"
readme = "README.rst"
authors = [{name = "The NiPreps Developers", email = "nipreps@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "importlib_resources >= 5.12; python_version < '3.12'",
    "matplotlib >= 3.4.2",
    "nibabel >= 3.0.1",
    "nilearn >= 0.5.2",
    "nipype",
    "numpy",
    "pandas",
    "pybids",
    "pyyaml",
    "seaborn",
    "svgutils >= 0.3.4",
    "templateflow",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nipreps/nireports"
NiPreps = "https://www.nipreps.org/"


[project.optional-dependencies]
doc = [
    "furo ~= 2021.10.09",
    "pydot >= 1.2.3",
    "pydotplus",
    "sphinx ~= 4.0",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-napoleon",
]

dev = [
    "black ~= 22.3.0",
    "pre-commit",
    "isort ~= 5.10.1",
    "flake8-pyproject",
]

test = [
    "coverage",
    "matplotlib",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-xdist",
    "sphinx",
]

# Aliases
docs = ["nireports[doc]"]
tests = ["nireports[test]"]
all = ["nireports[doc,dev,test]"]

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["nireports"]
exclude = [
    "nireports/tests/data",  # Large test data directory
]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
validate-bump = true
source = "vcs"
raw-options = { version_scheme = "nipreps-calver" }

[tool.hatch.build.hooks.vcs]
version-file = "nireports/_version.py"

#
# Developer tool configurations
#

[tool.black]
line-length = 99
target-version = ['py39']
skip-string-normalization = true
exclude = '''
# Directories
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
skip_gitignore = true

[tool.flake8]
max-line-length = "99"
doctests = "False"
exclude = "*build/"
ignore = ["W503", "E203"]
per-file-ignores = [
    "**/__init__.py : F401",
    "docs/conf.py : E265",
]

[tool.pytest.ini_options]
norecursedirs = [".git"]
addopts = "-svx --doctest-modules -n auto"
doctest_optionflags = "ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS"
env = "PYTHONHASHSEED=0"
filterwarnings = ["ignore::DeprecationWarning"]
junit_family = "xunit2"


[tool.coverage.run]
branch = true
omit = [
    '*/tests/*',
    '*/__init__.py',
    '*/conftest.py',
    'nireports/_version.py'
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'raise NotImplementedError',
    'warnings\.warn',
]
