[metadata]
url = https://github.com/nipreps/nireports
maintainer = The NiPreps Developers
maintainer_email = nipreps@gmail.com
name = nireports
description = NiReports - The Visual Report System (VRS) of NiPreps 
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License, Version 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.7
install_requires =
    attrs
    nibabel >= 3.0.1
    templateflow 

test_requires =
    coverage
    pytest
    pytest-cov
    pytest-xdist
packages = find:

[options.package_data]
nireports =
    data/*.json

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
doc =
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
duecredit =
    duecredit
style =
    flake8 >= 3.7.0
test =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28
tests =
    %(test)s
all =
    %(doc)s
    %(duecredit)s
    %(style)s
    %(test)s

[flake8]
max-line-length = 99
doctests = False
ignore =
    W503
    E203
exclude=*build/

