[metadata]
url = https://github.com/nipreps/nireports
maintainer = The NiPreps Developers
maintainer_email = nipreps@gmail.com
name = nireports
description = NiReports - The Visual Report System (VRS) of NiPreps
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License, Version 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.7
install_requires =
    jinja2
    nibabel >= 3.0.1
    pybids
    pyyaml
    nipype
packages = find:

[options.package_data]
nireports =
    data/*.json

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
doc =
    sphinx
docs =
    %(doc)s
style =
    black
    isort
    flake8
test =
    coverage
    pytest
    pytest-cov
    pytest-xdist
    matplotlib
tests =
    %(test)s
dev =
    pre-commit
    %(doc)s
    %(style)s
    %(test)s

[flake8]
max-line-length = 99
doctests = False
ignore =
    W503
    E203
exclude=*build/

[tool:pytest]
addopts = -sv --doctest-modules
